--- a/date/Makefile
+++ b/date/Makefile
@@ -1,12 +1,18 @@
-all: discordian.lua
+compile: discordian.lua
 
-check: 
-	lua check.lua
+check: compile
+	lua check_discordian.lua
 
 %.lua: %.msrc
-	macsrc < $< > $@
+	macsrc < $< | luac -o $@ - 
+
+install: compile
+	-mkdir -p $(LIBDIR)/date
+	cp discordian.lua $(LIBDIR)/date
+	-mkdir -p $(PREFIX)/man/man3l
+	cp date.discordian.3l $(PREFIX)/man/man3l
 
 clean:
 	-rm discordian.lua
-.PHONY: all check clean
+.PHONY: compile check clean install
 
